Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-35160

RBR does not work with vector type, ER_SLAVE_CONVERSION_FAILED

Details

    Description

      --source include/have_binlog_format_row.inc
      --source include/master-slave.inc
       
      create table t (pk int primary key, a vector(1) not null);
      insert into t values (1, 0x00000000);
       
      --sync_slave_with_master
      select pk, vec_totext(a) from t;
       
      --connection master
      drop table t;
       
      --source include/rpl_end.inc
      

      bb-11.6-MDEV-32887-vector eff6bc39fcb6e1f691fa08b153d9ea44b9f77b54

      2024-10-16  0:18:26 7 [ERROR] Slave SQL: Column 1 of table 'test.t' cannot be converted from type 'varbinary(4)' to type 'varbinary(4)', Gtid 0-1-2, Internal MariaDB error code: 1677
      2024-10-16  0:18:26 7 [ERROR] Error running query, slave SQL thread aborted. Fix the problem, and restart the slave SQL thread with "SLAVE START". We stopped at log 'master-bin.000001' position 504; GTID position '0-1-1'
      

      Attachments

        Issue Links

          Activity

            Transition Time In Source Status Execution Times
            Sergei Golubchik made transition -
            Open In Progress
            18h 25m 1
            Sergei Golubchik made transition -
            In Progress In Testing
            32m 8s 1
            Sergei Golubchik made transition -
            In Testing Closed
            20d 21h 35m 1

            People

              serg Sergei Golubchik
              elenst Elena Stepanova
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.