MDEV-35160 RBR does not work with vector type, ER_SLAVE_CONVERSION_FAILED